<?xml version="1.0" encoding="utf-8" ?>
<!--
   Copyright 2014 Jason J.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- The application name -->
    <string name="app_name">CareerStack</string>
    <!-- The settings string -->
    <string name="activity_settings">Settings</string>
    
    <!-- The settings string -->
    <string name="action_settings">Settings</string>
    <!-- The refresh string  -->
    <string name="action_refresh">Refresh</string>
    <!-- The toggle dark/light theme string -->    
    <string name="action_toggleTheme">Toggle Dark/Light Theme</string>
    
    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    <!-- The title for the DistanceDialogFragment -->
    <string name="careerstack_dialog_distance_title">Set Distance</string>
    
    <!-- End titles -->
    <eat-comment />

    
    
    <!-- The message for when no job description is selected -->
    <string name="careerstack_text_noJobDescriptionSelected"
        >Select a job item&#8230;</string>
    
    
    <!-- Starts Main fragment strings -->
    <eat-comment />
    
    <!-- The content description to describe career-stack image -->
    <string name="careerstack_img_careerstack_contentDescription"
        >Career Stack</string>
    <!-- The content description to describe powered by image -->
    <string name="careerstack_img_poweredBy_contentDescription"
        >Powered By Careers 2 point o, by Stack Over Flow</string>

    <!-- Hint value for keywords -->
    <string name="careerstack_input_hint_keywords"
        >Keywords (e.g. Android Java)</string>
    <!-- Hint value for location -->
    <string name="careerstack_input_hint_location"
        >City, Country or Zip (e.g. New York)</string>

    <!-- Label for the distance progress bar -->
    <string name="careerstack_label_distance">Distance</string>
    <!-- Miles. Prepared string for formating via String.format(). Takes one integer. -->
    <string name="careerstack_formatString_distanceValue_miles"
        ><xliff:g id="distance">%1$d</xliff:g> miles</string>
    <!-- Miles short. Prepared string for formating via String.format(). Takes one integer. -->
    <string name="careerstack_formatString_distanceValue_milesShort"
        ><xliff:g id="distance">%1$d</xliff:g> mi.</string>
    <!-- Kilometers. Prepared string for formating via String.format(). Takes one integer. -->
    <string name="careerstack_formatString_distanceValue_km"><xliff:g id="distance">%1$d</xliff:g> km</string>

    <!-- Work remotely check string for main. -->
    <string name="careerstack_main_check_workRemotely">Work remotely</string>
    <!-- Offers relocation check string for main. -->
    <string name="careerstack_main_check_offersRelocation"
        >Offers relocation</string>
    
    <!-- End Main fragment strings -->
    <eat-comment />
    
    
    
    
    
    <!-- Starts Results fragment strings -->
    <eat-comment />
    <!-- The go/search button for the search results page.  -->
    <string name="careerstack_searchResults_button_searchGo"
        >Go</string>
    
    <!-- The retry label for the search results page. -->
    <string name="careerstack_searchResults_label_retry"
        >Cannot establish connection</string>
    <!-- The retry button for the search results page. -->
    <string name="careerstack_searchResults_button_retry"
        >Retry</string>
    
    <!-- Work remotely check string for main. -->
    <string name="careerstack_searchBar_check_workRemotely">Remote</string>
    <!-- Offers relocation check string for main. -->
    <string name="careerstack_searchBar_check_offersRelocation"
        >Relocation</string>
    
    <!-- Simply No matching results statement.-->
    <string name="careerstack_careerlist_noResults" 
        >No matching results</string>
    
    <!-- No matching results statement, takes one term. -->
    <string name="careerstack_careerlist_noResults_stub" 
        >No matching results for \"<xliff:g id="search_term">%1$s</xliff:g>\"</string>
    
    <!-- Matching results statement, takes one term. -->
    <string name="careerstack_careerlist_matchingResults_stub" 
        >Matching results for \"<xliff:g id="search_term">%1$s</xliff:g>\"</string>
    
    <!-- Simply "Matching results" statement. -->
    <string name="careerstack_careerlist_matchingResults">Matching results</string>
    
    <!-- Results near statement, takes 1 statment. -->
    <string name="careerstack_careerlist_resultsNear">\u0020near <xliff:g id="location">%1$s</xliff:g></string>
    
    <!-- Ends Results fragment strings -->
    <eat-comment />
    
    
    
    
    
    <!-- Starts career item fragment strings -->
    <eat-comment />
    <!-- The open career link button. -->
    <string name="careerstack_careerItem_button_openLink">Open Link</string>
    <!-- The share this job button. -->
    <string name="careerstack_careerItem_button_shareJob">Share this job</string>
    <!-- Published string. Formatted: accepts 1 string. -->
    <string name="careerstack_formatString_publishDate"
        >Published: <xliff:g id="date">%1$s</xliff:g></string>
    <!-- Last update string. Formatted: accepts 1 string. -->
    <string name="careerstack_formatString_updateDate"
        >Last updated: <xliff:g id="date">%1$s</xliff:g></string>
    <!-- Copied Link. -->
    <string name="careerstack_toast_copiedLink">Copied link to clipboard</string>
    <!-- The string for "%1$s(job) at %2$s(place) -->
    <string name="careerstack_formatString_jobAtPlace"
        ><xliff:g id="job_title">%1$s</xliff:g> at <xliff:g id="company_name">%2$s</xliff:g></string>
     
    <!-- The string to show when tags are on. -->
    <string name="careerstack_careeritem_showtags_on"
        >[ - ]</string>
    
    <!-- The string to show when tags are off. -->
    <string name="careerstack_careeritem_showtags_off"
        >[ + ]</string>
    
	<!-- Ends career item  fragment strings -->
    <eat-comment />
    
    
    
    
    <!-- Starts settings fragment strings -->
    <eat-comment />
    <!-- The setting title for distance units -->
    <string name="careerstack_settings_useMetric_title">Miles</string>
    <!-- The setting description for distance units -->
    <string name="careerstack_settings_useMetric_summary"
        >Use the imperial system for distance</string>
    
        
    <!-- The pref title for keeping settings for search -->
    <string name="careerstack_settings_keepSearchSettings_title"
        >Persistent search settings</string>
    <!-- The pref description for keeping settings for search  -->
    <string name="careerstack_settings_keepSearchSettings_summary"
        >Restore search settings from previous session</string>
    
    
    <!-- The pref title for quick switching themes -->
    <string name="careerstack_settings_quickSwitch_title"
        >Quick switch themes</string>
    <!-- The pref description for quick switching themes  -->
    <string name="careerstack_settings_quickSwitch_summary"
        >WARNING! EXPERIMENTAL!
\nSwitch between themes without restarting. Limited support.</string>    
    <!-- The pref support for quick switching themes  -->
    <string name="careerstack_settings_quickSwitch_support"
        >Support for Android 3.0 and up</string>

	<!-- The pref dialog mesage for quick switching themes  -->
    <string name="careerstack_settings_quickSwitch_confirmMsg"
        >Quick switching themes is experimental 
        and may not work on all devices. Try it anyway? 
        \n\n(Requires restart to take effect.)</string>
    
        <!-- The pref title for showing tags -->
    <string name="careerstack_settings_showTags_title"
        >Show search tags</string>
    <!-- The pref description for showing tags  -->
    <string name="careerstack_settings_showTags_summary"
        >Displays search tags for job description</string>
    
   
    
    <!-- The pref title for tablet mode -->
    <string name="careerstack_settings_tabletMode_title"
        >Use tablet/dual pane mode</string>
    <!-- The pref description for tablet mode  -->
    <string name="careerstack_settings_tabletMode_summary"
        >View results in dual pane mode, when available</string>
        
    <!-- The pref title for clearin settings -->
    <string name="careerstack_settings_clearSettings_title"
        >Reset all settings</string>
    <!-- The pref description for clearing settings  -->
    <string name="careerstack_settings_clearSettings_summary"
        >Set all settings to default values</string>
    <!-- The clearing settings confirmation message  -->
    <string name="careerstack_settings_clearSettings_confirmMsg"
        >Are you sure you wish to reset ALL settings? 
        This cannot be undone.</string>
    
    <!-- Toast for when settings are cleared. -->
    <string name="careerstack_toast_clearedSettings"
        >Settings reset</string>
        
    <!-- The pref title app version -->
    <string name="careerstack_settings_softwareVersion_title"
        >Application version</string>
    
    <!-- Ends settings fragment strings -->
    <eat-comment />
    
    
    
    <!-- Starts theme dialog fragment strings -->
    <eat-comment />
    <!-- The changing theme confirmation message  -->
    <string name="careerstack_theme_dialogMsg"
        >Changing the theme will restart the app. You will lose
        any loaded searches. Are you sure?</string>
    
    <string name="careerstack_restart_dialogMsg_confirm"
        >Yes, restart</string>
        
    <!-- Ends theme dialog strings -->
    <eat-comment />
        
</resources>
