<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright 2014 Jason J.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:careerstack="http://schemas.android.com/apk/res-auto" >
    
    <item 
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@android:string/search_go"
        android:icon="@drawable/ic_action_search"
        careerstack:showAsAction="always"
        />
    
    <item 
        android:id="@+id/action_refresh"
        android:orderInCategory="101"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        careerstack:showAsAction="ifRoom|collapseActionView"
        />
        
    
    
    <item
        android:id="@+id/action_toggleTheme"
        android:orderInCategory="102"
        android:title="@string/action_toggleTheme"
        careerstack:showAsAction="collapseActionView"
        />
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="103"
        android:title="@string/action_settings"
        careerstack:showAsAction="collapseActionView"
        />

</menu>
