<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright 2014 Jason J.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/careerstack_main_paddingBottom"
    tools:ignore="RtlHardcoded" >

    <ImageView
        android:id="@+id/careerstack_main_img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/careerstack_img_careerstack_contentDescription"
        android:src="?attr/ic_careerstack" />

    <ImageView
        android:id="@+id/careerstack_main_img_poweredBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/careerstack_main_img_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/careerstack_main_poweredBy_marginTop"
        android:contentDescription="@string/careerstack_img_poweredBy_contentDescription"
        android:src="@drawable/ic_powered_by_stackoverflow" />

    <View
        android:id="@+id/careerstack_main_edit_widthDummy"
        style="@style/careerstack_main_editin_width"
        android:layout_height="1dp"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/careerstack_main_editin_keywords"
        style="@style/careerstack_main_text_width"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/careerstack_main_edit_widthDummy"
        android:layout_alignRight="@+id/careerstack_main_edit_widthDummy"
        android:layout_below="@+id/careerstack_main_img_poweredBy"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/careerstack_main_poweredBy_marginBottom"
        android:ellipsize="end"
        android:ems="10"
        android:hint="@string/careerstack_input_hint_keywords"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/careerstack_main_editin_location"
        style="@style/careerstack_main_text_width"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/careerstack_main_edit_widthDummy"
        android:layout_alignRight="@+id/careerstack_main_edit_widthDummy"
        android:layout_below="@+id/careerstack_main_editin_keywords"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/careerstack_main_text_marginTop"
        android:ellipsize="end"
        android:ems="10"
        android:hint="@string/careerstack_input_hint_location"
        android:maxLines="1"
        android:singleLine="true" />

    <ViewStub
        android:id="@+id/careerstack_main_viewStub_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/careerstack_main_editin_location"
        android:layout_alignRight="@+id/careerstack_main_editin_location"
        android:layout_below="@+id/careerstack_main_editin_location"
        android:layout_marginTop="@dimen/careerstack_main_interView_marginTop"
        android:inflatedId="@+id/careerstack_main_viewStub_distance"
        android:layout="@layout/viewstub_distance_seekbar" />

    <CheckBox
        android:id="@+id/careerstack_main_check_allowRemote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/careerstack_main_editin_keywords"
        android:layout_alignRight="@+id/careerstack_main_check_centerDummy"
        android:layout_below="@+id/careerstack_main_viewStub_distance"
        android:layout_marginLeft="@dimen/careerstack_main_allowRemote_marginLeft"
        android:layout_marginTop="@dimen/careerstack_main_interView_marginTop"
        android:text="@string/careerstack_main_check_workRemotely" />

    <!-- Used to mimic layout weight in relative -->

    <View
        android:id="@+id/careerstack_main_check_centerDummy"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <CheckBox
        android:id="@+id/careerstack_main_check_offerRelocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/careerstack_main_check_centerDummy"
        android:layout_alignRight="@+id/careerstack_main_viewStub_distance"
        android:layout_below="@+id/careerstack_main_viewStub_distance"
        android:layout_marginLeft="@dimen/careerstack_main_relocate_marginLeft"
        android:layout_marginTop="@dimen/careerstack_main_interView_marginTop"
        android:layout_toRightOf="@+id/careerstack_main_check_allowRemote"
        android:text="@string/careerstack_main_check_offersRelocation" />

    <Button
        android:id="@+id/careerstack_main_button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/careerstack_main_check_offerRelocation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/careerstack_main_searchButton_marginTop"
        android:text="@android:string/search_go" />

</RelativeLayout>