<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright 2014 Jason J.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/careerstack_careerItem_scrollView"
    >
    
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:descendantFocusability="blocksDescendants"
    	>	
	    <TextView
		android:id="@+id/careerstack_careerItem_text_jobTitle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="Really long Job Title title"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:textColor="?attr/careerstack_title_color"
		tools:ignore="HardcodedText" />
	    
	    <TextView
		android:id="@+id/careerstack_careerItem_text_companyLocationEtc"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/careerstack_careeritem_interText_marginTop"
		android:text="Company Inc, At location!"
		android:textAppearance="?android:attr/textAppearanceMedium" 
		tools:ignore="HardcodedText"
		android:textColor="@color/careerstack_translucent_grey"
		/>
	    
	    <LinearLayout
	        android:layout_width="match_parent" 
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:gravity="top"
	        >
		    <Button
			android:id="@+id/careerstack_careerItem_button_openLink"
			android:textSize="14sp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1.0"
			android:text="@string/careerstack_careerItem_button_openLink" />
	
		    <Button
			android:id="@+id/careerstack_careerItem_button_copyUrl"
			android:textSize="14sp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1.0"
			android:text="@android:string/copyUrl" />
	
		    <Button
			android:id="@+id/careerstack_careerItem_button_share"
			android:textSize="14sp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1.0"
			android:text="@string/careerstack_careerItem_button_shareJob" />
	    </LinearLayout>
		
	    <LinearLayout
	        android:layout_width="match_parent" 
	        android:layout_height="wrap_content"
	        
	        android:orientation="horizontal"
	        
	        android:gravity="center_vertical"
	        >

	        <TextView
	            android:id="@+id/careerstack_careerItem_text_updateDate"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            
	            android:text="@string/careerstack_formatString_publishUpdateDate"
	            android:textColor="@color/careerstack_translucent_grey"
	            
	            android:layout_weight="1.0"
	            android:textSize="14sp" />

		    <!-- Set  saveEnabled to false as it is set by a preference which is,
		     in turn, set in multiple places -->
		    <CheckBox
		        android:id="@+id/careerstack_careerItem_check_showTags"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:text="@string/careerstack_careeritem_showtags_on"
		        android:button="@null"
		        android:background="?attr/careerstack_checkbox_button"
		        android:saveEnabled="false"
		        />
	        
        </LinearLayout>
	    
	    <WebView
	        android:id="@+id/careerstack_careerItem_webview_tags"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/careerstack_careeritem_interText_marginTop"
	        
	        android:text="android, java, basket-weaving"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        	        
	        tools:ignore="HardcodedText,WebViewLayout" />
	    
	    <WebView
	        android:id="@+id/careerstack_careerItem_webview_jobDescription"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/careerstack_careeritem_interText_marginTop"
	        
	        android:text="Description: Willing to program in exchange for currency"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        	        
	        tools:ignore="HardcodedText,WebViewLayout" />

	</LinearLayout>
</ScrollView>
